# federated-learning-fraud-detection

./: .bandit  .flake8  .gitignore  CHECKPOINT_PHASE_5.md  FEDERATED_LEARNING_SETUP.md  README.md  benchmark_results.json  dp_verification_results.json  e2e_test_results.json  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py
.github/workflows/: .gitkeep  README.md  ci-cd.yml
config/: config.yaml
data/splits/: .gitkeep
docker/: Dockerfile.aggregation_server  Dockerfile.bank_client  Dockerfile.mlflow  ORCHESTRATION.md  README.md  alert_rules.yml  docker-compose.yml  orchestrate.ps1  orchestrate.sh  prometheus.yml  start.ps1  start.sh
examples/: federated_learning_example.py  prometheus_monitoring_example.py
monitoring/: README.md
monitoring/grafana/: README.md  federated_learning_dashboard.json
notebooks/: .gitkeep  BASELINE_FIXED.md  NOTEBOOK_STATUS.md  README.md  architecture_experiments.ipynb  baseline_centralized.ipynb  baseline_no_dp_metrics.json  privacy_utility_baseline.ipynb
scripts/: setup_environment.py
src/: __init__.py
src/config/: __init__.py  config_manager.py  configuration_system.py
tests/: README_PROPERTY_17.md  README_TESTING_INFRASTRUCTURE.md  conftest.py  e2e_workflow_test.py  hypothesis_strategies.py  performance_benchmarks.py  simple_verify.py  test_bank_client.py  test_config.py  test_container_integration.py  test_error_recovery.py  test_federated_manual.py  test_federated_simple.py  test_mlops_integration.py  test_preprocessing_edge_cases.py  test_privacy_utility.py  test_property_17_monitoring.py  verify_bank_client.py  verify_dp_guarantees.py  verify_privacy_engine.py  verify_prometheus_exporter.py  verify_prometheus_simple.py  verify_property_17_tests.py  verify_setup.py
(+26 files in other folders)
